ajout des media queries

--- a/public/css/styleBackend.css
+++ b/public/css/styleBackend.css
@@ -102,7 +102,7 @@ label.error {
 
 }
 
-/* Media Queries Header */
+/* Media Queries */
 
 /* Very small devices (0px and up) */
 @media (min-width: 0px) {
@@ -116,8 +116,65 @@ label.error {
     }
 }
 
+   
+
+/* Sur tous types d'écrans taille max 736px */
+@media all  and  (max-width: 736px){
+     .table th{
+        font-size: 12px;
+    }
+
+    .table td, .table th {
+        padding: .25rem;
+
+    }
+
+    th p {
+        text-align: center!important;
+    }
+
+    .fa-edit{
+        display: flex;
+        padding-top: 15px;
+        justify-content: center;
+
+    }
+    .btn-danger{
+        margin-left: 20px;
+    }
+    .btn{
+            font-size: 0.85rem !important;
+    }
+
+    tr th{
+        padding: 2px !important;
+        text-align: center;
+
+    }
+    td p{
+        font-size: 11px;
+    }
+
+    td{
+        padding:5px 0px !important;
+    }
+    td{
+        height: auto !important;
+    }
+}
+
+
+
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+
+    .fa-edit{
+        display: flex;
+        padding-top: 15px;
+        justify-content: center;
+        margin-right: 25px; 
+
+    }
     
     #table-blogspots_filter, #table-comments_filter {
     margin-left: 0;
@@ -126,4 +183,13 @@ label.error {
     div.dataTables_wrapper div.dataTables_filter {
         text-align: right !important;
     }
+
+    .btn-danger{
+        margin-left: 20px;
+    }
+
+     .table th{
+        font-size: 16px;
+    }
+
 }
