--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,6 +337,38 @@ footer p{
     .btn-danger{
         left: 0px !important;
     }
+    
+    body{
+        width: 100%;
+    } 
+    html{
+        width:380px;
+        margin: 0px;
+        padding: 0px;
+    }
+    .navbar{
+        width: 100%;
+        margin:0px;
+        padding: 0px;
+    }
+
+    #bloc-page{
+        width: 380px;
+        /*height: 580px;*/
+    }
+    #connect{
+        padding-left: 20px;
+        padding-right: 0px;
+        padding-top: 150px;
+
+    }
+    #connect h2{
+        padding: 50px 0px;}
+
+    footer{
+        width: 110%;
+
+    }
 
 
 
